correct manifest, improve spacing of hours

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Diligence Tracker",
+  "name": "Track which hours and days you do something.",
   "icons": [
     {
       "src": "favicon.ico",
